# video_bin_classification

./: .gitignore  README.rst  pyproject.toml
tests/: test_ua_creatives.py
ua_creatives/: creativedatasets.py  creatives_models.py  datapreparation.py  eval_models.py  preprocessing.py  results_vis.py  train_model.py
