[tool.poetry]
name = "video_classification"
version = "0.1.0"
description = ""
authors = ["pabloag5@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.0"
matplotlib = "^3.3.1"
torch = "^1.6.0"
torchvision = "^0.7.0"
av = "^8.0.2"
opencv-python = "^4.4.0"
scikit-learn = "^0.23.2"
tqdm = "^4.48.2"
wave = "^0.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
